Added helper to grab just static layers from local DB.